# assignmentscheduler

./: Assignment.h  CMakeLists.txt  Class.cpp  Classfinal.cpp  README.md  assignmentcreator.cpp  displayfunctions.cpp  main.cpp  planner.cpp
Data/: Shahaf.json
assignmentscheduler-improved_class/: assignment_program
assignmentscheduler-improved_class 2/: CMakeLists.txt
assignmentscheduler-improved_class 2/assignmentscheduler-improved_class/Data/: Trinidad.json
assignmentscheduler-improved_class 2/include/: displayfunctions.hpp
assignmentscheduler-improved_class 2/src/: Assignment.hpp  Classfinal.cpp  assignmentcreator.cpp  assignmentcreator.hpp  displayfunctions.cpp  main.cpp  planner.cpp
assignmentscheduler-improved_class 2/test/: test_assignmentcreator.cpp  test_displayfunctions.cpp  test_planner.cpp
assignmentscheduler-improved_class/Data/: Shahaf.json
include/: displayfunctions.hpp  planner.hpp
src/: Classfinal.cpp  assignmentcreator.cpp  displayfunctions.cpp  main.cpp  planner.cpp
src/Data/: Ron.json
test/: test_Classfinal.cpp  test_assignmentcreator.cpp  test_planner.cpp
